v0.3.1/_sources/gallery/symbols/multi_parameter_symbols.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/symbols/multi_parameter_symbols.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_gallery_symbols_multi_parameter_symbols.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_symbols_multi_parameter_symbols.py:


Multi-parameter symbols
-------------------------

The :meth:`pygmt.Figure.plot` method can plot individual multi-parameter
symbols by passing the corresponding shortcuts listed below to the ``style``
parameter. Additionally, we must define the required parameters in a 2d list or
numpy array (``[[parameters]]`` for a single symbol or
``[[parameters_1],[parameters_2],[parameters_i]]`` for several ones) or use an
appropriately formatted input file and pass it to ``data``.

The following symbols are available:

- **e**: ellipse, ``[[lon, lat, direction, major_axis, minor_axis]]``
- **j**: rotated rectangle, ``[[lon, lat, direction, width, height]]``
- **r**: rectangle, ``[[lon, lat, width, height]]``
- **R**: rounded rectangle, ``[[lon, lat, width, height, radius]]``
- **w**: pie wedge, ``[[lon, lat, radius, startdir, stopdir]]``, the last two
  arguments are directions given in degrees counter-clockwise from horizontal

Upper-case versions **E**, **J**, and **W** are similar to **e**, **j** and
**w** but expect geographic azimuths and distances.

.. GENERATED FROM PYTHON SOURCE LINES 24-51



.. image:: /gallery/symbols/images/sphx_glr_multi_parameter_symbols_001.png
    :alt: multi parameter symbols
    :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none


    <IPython.core.display.Image object>





|

.. code-block:: default


    import pygmt

    fig = pygmt.Figure()
    fig.basemap(region=[0, 6, 0, 2], projection="x3c", frame=True)

    # ELLIPSE
    data = [[0.5, 1, 45, 3, 1]]
    fig.plot(data=data, style="e", color="orange", pen="2p,black")

    # ROTATED RECTANGLE
    data = [[1.5, 1, 120, 5, 0.5]]
    fig.plot(data=data, style="j", color="red3", pen="2p,black")

    # RECTANGLE
    data = [[3, 1, 4, 1.5]]
    fig.plot(data=data, style="r", color="dodgerblue", pen="2p,black")

    # ROUNDED RECTANGLE
    data = [[4.5, 1, 1.25, 4, 0.5]]
    fig.plot(data=data, style="R", color="seagreen", pen="2p,black")

    # PIE WEDGE
    data = [[5.5, 1, 2.5, 45, 330]]
    fig.plot(data=data, style="w", color="lightgray", pen="2p,black")

    fig.show()


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  1.766 seconds)


.. _sphx_glr_download_gallery_symbols_multi_parameter_symbols.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: multi_parameter_symbols.py <multi_parameter_symbols.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: multi_parameter_symbols.ipynb <multi_parameter_symbols.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
